--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -24,7 +24,7 @@
     background-image: url('../images/header_bg.png'),url('../images/developer.png');
     background-repeat:no-repeat;
     background-position: bottom right,left top;
-    margin-top: 0;
+
     }
 .nav-title{
     font-weight: 800;
@@ -77,4 +77,46 @@ nav ul{
 }
 .btn-multiple{
     display: flex;
+}
+
+/* main styles */
+main{
+    max-width: 1140px;
+    margin:auto;
+}
+/* about section styles */
+.about{
+    background-color: #FFF8F3;
+    margin-top: 120px;
+    padding: 50px 150px;
+    text-align: center;
+
+    
+}
+.section-title{
+    text-align: center;
+    font-weight: 700;
+    font-size: 35px;
+}
+.section-description{
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    /* text-align: center; */
+    color: #757575;
+
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.info-title{
+    font-weight: 400;
+    font-size: 20px;
+    color: #757575
+}
+.info-description{
+    font-weight: 700;
+    font-size: 20px;
+    color: #474747;
 }
