--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -182,6 +182,31 @@ main{
     margin-top: 20px;
 }
 .resume-button{
-   margin-top: 50px;
+   margin-top:  50px;
    text-align: center;
 }
+/* contact styles */
+.contact{
+    display: flex;
+    background: #FFF8F3;
+    /* margin: 130px auto 0; */
+    gap: 100px;
+    padding: 130px 200px;
+    margin-top: 130px;
+
+}
+.contact.section-title{
+    text-align: left;
+}
+
+
+
+.contact input[type="text"],input[type="email"],textarea{
+    margin-bottom: 24px;
+    width: 100%;
+    border: 0;
+    padding: 18px 36px;
+}
+.contact a{
+    text-decoration: none;
+ }
