nav updated with padding

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -33,7 +33,7 @@
 nav{
     display: flex;
     justify-content: space-between;
-    margin: 50px 200px;
+   padding: 50px 200px;
 }
 nav li{
    list-style: none;
@@ -197,6 +197,7 @@ main{
 }
 .contact.section-title{
     text-align: left;
+    
 }
 
 
